--- a/autoCompleteSearchInput.css
+++ b/autoCompleteSearchInput.css
@@ -1,54 +1,51 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box; /* includng the border and pading element when set the element property */
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; /* set the fon family */
 }
 
 input {
-    border: unset;
-    background-color: #e9e9e9;
-    padding: 0.5em;
-    /* border-radius: 5px; */
+  border: unset; /* remove the border input feild */
+  background-color: #e9e9e9; /* background color change  */
+  padding: 0.5em; /* padding set */
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer; /* change the cursor when mouse over the button */
 }
 
 .btn-submit {
-    border: unset;
-    background-color: #1f67f7;
-    padding: .5em;
-    /* border-radius: 5px; */
-    color: white;
+  border: unset; /* border remve the button */
+  background-color: #1f67f7; /* background color change */
+  padding: 0.5em; /* change the padding to relevent the input  */
+  color: white; /* font color change */
 }
 .autocomplete-wrapper {
-    display: inline-block;
-    position: relative;
+  display: inline-block; /* make the width same input and li */
+  position: relative; /* to control maximum width  all the child element */
 }
 
 .autocomplete-list {
-    list-style: none;
-    padding: unset;
-    margin: unset;
-    position: absolute;
-    width: 100%;
+  list-style: none; /* remove the bullets style li  */
+  padding: unset; /* change padding */
+  margin: unset; /* change margin */
+  position: absolute; /* drop-out the default flow control of elements */
+  width: 100%;
 }
 .autocomplete-list li {
-    border: 1px solid #e9e9e9;
-    border-top: unset;
+  border: 1px solid #e9e9e9; /* display the border of li elements */
+  border-top: unset; /* remove the top border line of li element */
 }
-.autocomplete-list li:hover{
-    background-color: #efefef;
+.autocomplete-list li:hover {
+  background-color: #efefef; /* when mouse over the li element to change the color is make ux better */
 }
 
 .autocomplete-list button {
-    border: unset;
-    background-color: unset;
-    width: 100%;
-    text-align: left;
-    padding: .5em
-    ;
+  border: unset; /* remove button border */
+  background-color: unset; /* remove background color */
+  width: 100%; /* make width same of parrent element */
+  text-align: left; /* change the text left (default is center) */
+  padding: 0.5em; /* match the ui parrent element */
 }
