--- a/autoCompleteSearchInput.css
+++ b/autoCompleteSearchInput.css
@@ -35,6 +35,7 @@ button {
   width: 100%;
 }
 .autocomplete-list li {
+  background-color: rgb(255, 255, 252);
   border: 1px solid #e9e9e9; /* display the border of li elements */
   border-top: unset; /* remove the top border line of li element */
 }
